--- a/broken_project/pubspec.yaml
+++ b/broken_project/pubspec.yaml
@@ -30,15 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
-  mailer: ^5.0.0
-  firebase_core: 3.10.0
-  cloud_firestore: 5.6.1
-  http: ^0.13.3
-  dartdap: ^0.10.0
-  mobile_scanner: ^3.5.5
+  intl: ^0.20.2
+  mailer: ^6.4.1
+  http: ^1.2.1
+  http_certificate_pinning: ^3.0.1
+  mobile_scanner: ^7.0.1
   url_launcher: ^6.2.6
   shared_preferences: ^2.2.2
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,6 +78,7 @@ flutter:
     - images/logo-pjwstk.png
     - images/Flag_of_Poland.png
     - images/Flag_of_the_United_Kingdom.png
+    - assets/certs/ck.pjwstk.edu.pl.crt
 
   # To add assets to your application, add an assets section, like this:
   # assets:
