--- a/broken_project/pubspec.yaml
+++ b/broken_project/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   mobile_scanner: ^7.0.1
   url_launcher: ^6.2.6
   shared_preferences: ^2.2.2
+  dio: ^5.4.3
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.0
+  path_provider: ^2.1.2
+  crypto: ^3.0.3
   
 
   # The following adds the Cupertino Icons font to your application.
